--- a/app/src/main/res/values-ar/strings_22.xml
+++ b/app/src/main/res/values-ar/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">المدة (بالدقائق)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        اضغط على زر <font color="cyan">الاختبار</font> لتشغيل سير العمل هذا يدويًا.
+        اضغط على زر <font color="#03DAC5">الاختبار</font> لتشغيل سير العمل هذا يدويًا.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">تأخير (ثواني)</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        تقوم هذه الميزة بتغيير نغمة الرنين الافتراضية للنظام مؤقتًا قبل بدء الرنين ثم إعادتها بعد <font color="cyan">%d ثانية</font>، وهو الوقت الذي يُتوقع أن يكون الرنين قد بدأ فيه. <br>
+        تقوم هذه الميزة بتغيير نغمة الرنين الافتراضية للنظام مؤقتًا قبل بدء الرنين ثم إعادتها بعد <font color="#03DAC5">%d ثانية</font>، وهو الوقت الذي يُتوقع أن يكون الرنين قد بدأ فيه. <br>
         <br>
         توفر بعض الهواتف ميزات مثل <b>اهتزاز أولاً ثم رنين</b> والتي قد تؤخر الرنين بمقدار 6 ثوانٍ على سبيل المثال. في هذه الحالة، قم بزيادة هذا التأخير وفقًا لذلك.
         ]]>
