--- a/app/src/main/res/values-ar/strings_5.xml
+++ b/app/src/main/res/values-ar/strings_5.xml
@@ -37,7 +37,7 @@
         <b>الخيارات:</b><br>
         <br>
         <h6><font color="#00BFFF">- في غضون أيام</font></h6>
-        يتم تجاهل المكالمات التي حدثت قبل <font color="cyan">%s أيام</font>.
+        يتم تجاهل المكالمات التي حدثت قبل <font color="#03DAC5">%s أيام</font>.
         <br>
         <h6><font color="#00BFFF">- تضمين الرسائل النصية</font></h6>
         عند التمكين، احتساب إرسال الرسائل النصية إلى هذا الرقم أيضًا.<br>
