--- a/app/src/main/res/values-es/strings_22.xml
+++ b/app/src/main/res/values-es/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">Duración (minutos)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        Toque el botón <font color="cyan">Probar</font> para ejecutar manualmente este flujo de trabajo.
+        Toque el botón <font color="#03DAC5">Probar</font> para ejecutar manualmente este flujo de trabajo.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -174,7 +174,7 @@
     <string name="help_ringtone_delay">
         <![CDATA[
         Esta característica cambia temporalmente el tono de llamada predeterminado del sistema antes de que comience a sonar y
-         luego lo revierte después de <font color="cyan">%d segundos</font>, momento en el cual se espera que la llamada haya comenzado. <br>
+         luego lo revierte después de <font color="#03DAC5">%d segundos</font>, momento en el cual se espera que la llamada haya comenzado. <br>
         <br>
         Algunos teléfonos ofrecen características como <b>Vibrar Primero y Luego Sonar</b> que pueden posponer el timbre, digamos, por 6 segundos.
          En ese caso, aumente este retraso en consecuencia.
