--- a/app/src/main/res/values-fa/strings_18.xml
+++ b/app/src/main/res/values-fa/strings_18.xml
@@ -57,10 +57,10 @@
         <b>گزینه‌ها:</b><br>
         <br>
         <h6><font color="#00BFFF">- در مدت روزها</font></h6>
-        تماس‌هایی که قبل از <font color="cyan">%d روز</font> رخ داده‌اند نادیده گرفته می‌شوند.<br>
+        تماس‌هایی که قبل از <font color="#03DAC5">%d روز</font> رخ داده‌اند نادیده گرفته می‌شوند.<br>
         <br>
         <h6><font color="#00BFFF">- حداقل مدت زمان</font></h6>
-        تماس‌هایی که کمتر از <font color="cyan">%d ثانیه</font> طول کشیده‌اند نادیده گرفته می‌شوند.<br>
+        تماس‌هایی که کمتر از <font color="#03DAC5">%d ثانیه</font> طول کشیده‌اند نادیده گرفته می‌شوند.<br>
         <br>
         <font color="#ea86ff"><b>اولویت: 10</b></font>
         ]]>
