--- a/app/src/main/res/values-fa/strings_22.xml
+++ b/app/src/main/res/values-fa/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">مدت زمان (دقیقه)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        برای اجرای دستی این گردش کار، روی دکمه <font color="cyan">تست</font> ضربه بزنید.
+        برای اجرای دستی این گردش کار، روی دکمه <font color="#03DAC5">تست</font> ضربه بزنید.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -174,7 +174,7 @@
     <string name="help_ringtone_delay">
         <![CDATA[
         این ویژگی به طور موقت آهنگ زنگ پیش‌فرض سیستم را قبل از شروع زنگ زدن تغییر می‌دهد و
-         سپس پس از <font color="cyan">%d ثانیه</font> آن را بازمی‌گرداند، زمانی که انتظار می‌رود زنگ زدن شروع شده باشد. <br>
+         سپس پس از <font color="#03DAC5">%d ثانیه</font> آن را بازمی‌گرداند، زمانی که انتظار می‌رود زنگ زدن شروع شده باشد. <br>
         <br>
         برخی از تلفن‌ها ویژگی‌هایی مانند <b>اول لرزش، سپس زنگ زدن</b> را ارائه می‌دهند که ممکن است زنگ زدن را مثلاً 6 ثانیه به تأخیر بیندازد.
          در این صورت، این تأخیر را بر این اساس افزایش دهید.
