--- a/app/src/main/res/values-fa/strings_5.xml
+++ b/app/src/main/res/values-fa/strings_5.xml
@@ -37,7 +37,7 @@
         <b>گزینه‌ها:</b><br>
         <br>
         <h6><font color="#00BFFF">- در عرض چند روز</font></h6>
-        تماس‌هایی که قبل از <font color="cyan">%s روز</font> رخ داده‌اند، نادیده گرفته می‌شوند.<br>
+        تماس‌هایی که قبل از <font color="#03DAC5">%s روز</font> رخ داده‌اند، نادیده گرفته می‌شوند.<br>
         <br>
         <h6><font color="#00BFFF">- شامل پیامک</font></h6>
         در صورت فعال بودن، ارسال پیامک به آن شماره نیز محسوب می‌شود.<br>
