--- a/app/src/main/res/values-in/strings_5.xml
+++ b/app/src/main/res/values-in/strings_5.xml
@@ -37,7 +37,7 @@
         <b>Opsi:</b><br>
         <br>
         <h6><font color="#00BFFF">- Dalam Hari</font></h6>
-        Panggilan yang terjadi sebelum <font color="cyan">%s hari</font> akan diabaikan.<br>
+        Panggilan yang terjadi sebelum <font color="#03DAC5">%s hari</font> akan diabaikan.<br>
         <br>
         <h6><font color="#00BFFF">- Sertakan SMS</font></h6>
         Saat diaktifkan, SMS ke nomor tersebut juga dihitung.<br>
