--- a/app/src/main/res/values-iw/strings_22.xml
+++ b/app/src/main/res/values-iw/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">משך זמן (דקות)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        הקש על כפתור <font color="cyan">בדיקה</font> כדי להפעיל זרימת עבודה זו ידנית.
+        הקש על כפתור <font color="#03DAC5">בדיקה</font> כדי להפעיל זרימת עבודה זו ידנית.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">השהיה (שניות)</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        תכונה זו משנה באופן זמני את צלצול ברירת המחדל של המערכת לפני תחילת הצלצול ומחזירה אותו לאחר <font color="cyan">%d שניות</font>, כשעד אז הצלצול צפוי להתחיל. <br>
+        תכונה זו משנה באופן זמני את צלצול ברירת המחדל של המערכת לפני תחילת הצלצול ומחזירה אותו לאחר <font color="#03DAC5">%d שניות</font>, כשעד אז הצלצול צפוי להתחיל. <br>
         <br>
         טלפונים מסוימים מציעים תכונות כמו <b>רטט תחילה ואז צלצול</b> שעשויות לדחות את הצלצול, למשל, ב-6 שניות. במקרה כזה, הגדל את ההשהיה הזו בהתאם.
         ]]>
