--- a/app/src/main/res/values-ru/strings_18.xml
+++ b/app/src/main/res/values-ru/strings_18.xml
@@ -57,10 +57,10 @@
         <b>Параметры:</b><br>
         <br>
         <h6><font color="#00BFFF">- В течение дней</font></h6>
-        Звонки, произошедшие до <font color="cyan">%d дней</font>, игнорируются.<br>
+        Звонки, произошедшие до <font color="#03DAC5">%d дней</font>, игнорируются.<br>
         <br>
         <h6><font color="#00BFFF">- Минимальная длительность</font></h6>
-        Звонки длительностью менее <font color="cyan">%d секунд</font> игнорируются.<br>
+        Звонки длительностью менее <font color="#03DAC5">%d секунд</font> игнорируются.<br>
         <br>
         <font color="#ea86ff"><b>Приоритет: 10</b></font>
         ]]>
