--- a/app/src/main/res/values-ru/strings_5.xml
+++ b/app/src/main/res/values-ru/strings_5.xml
@@ -37,7 +37,7 @@
         <b>Опции:</b><br>
         <br>
         <h6><font color="#00BFFF">- В течение дней</font></h6>
-        Звонки, произошедшие до <font color="cyan">%s дней</font>, игнорируются.<br>
+        Звонки, произошедшие до <font color="#03DAC5">%s дней</font>, игнорируются.<br>
         <br>
         <h6><font color="#00BFFF">- Включить SMS</font></h6>
         Если включено, отправка SMS на этот номер также учитывается.<br>
