--- a/app/src/main/res/values-uk/strings_18.xml
+++ b/app/src/main/res/values-uk/strings_18.xml
@@ -57,10 +57,10 @@
         <b>Параметри:</b><br>
         <br>
         <h6><font color="#00BFFF">- Протягом днів</font></h6>
-        Дзвінки, що відбулися раніше, ніж <font color="cyan">%d днів</font>, ігноруються.<br>
+        Дзвінки, що відбулися раніше, ніж <font color="#03DAC5">%d днів</font>, ігноруються.<br>
         <br>
         <h6><font color="#00BFFF">- Мінімальна тривалість</font></h6>
-        Дзвінки тривалістю менше <font color="cyan">%d секунд</font> ігноруються.<br>
+        Дзвінки тривалістю менше <font color="#03DAC5">%d секунд</font> ігноруються.<br>
         <br>
         <font color="#ea86ff"><b>Пріоритет: 10</b></font>
         ]]>
