--- a/app/src/main/res/values-uk/strings_22.xml
+++ b/app/src/main/res/values-uk/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">Тривалість (хвилини)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        Торкніться кнопки <font color="cyan">Тест</font>, щоб вручну запустити цей робочий процес.
+        Торкніться кнопки <font color="#03DAC5">Тест</font>, щоб вручну запустити цей робочий процес.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">Затримка (секунди)</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        Ця функція тимчасово змінює системний мелодію дзвінка за замовчуванням перед початком дзвінка, а потім повертає її через <font color="cyan">%d секунд</font>, до цього часу дзвінок, як очікується, повинен розпочатися. <br>
+        Ця функція тимчасово змінює системний мелодію дзвінка за замовчуванням перед початком дзвінка, а потім повертає її через <font color="#03DAC5">%d секунд</font>, до цього часу дзвінок, як очікується, повинен розпочатися. <br>
         <br>
         Деякі телефони пропонують такі функції, як <b>Спочатку вібрація, потім дзвінок</b>, які можуть відкласти дзвінок, наприклад, на 6 секунд. У такому випадку, відповідно збільште цю затримку.
         ]]>
