--- a/app/src/main/res/values-uk/strings_5.xml
+++ b/app/src/main/res/values-uk/strings_5.xml
@@ -36,7 +36,7 @@
         <b>Опції:</b><br>
         <br>
         <h6><font color="#00BFFF">- Протягом днів</font></h6>
-        Дзвінки, що відбулися до <font color="cyan">%s днів</font>, ігноруються.<br>
+        Дзвінки, що відбулися до <font color="#03DAC5">%s днів</font>, ігноруються.<br>
         <br>
         <h6><font color="#00BFFF">- Включити SMS</font></h6>
         Якщо увімкнено, надсилання SMS на цей номер також враховується.<br>
