--- a/app/src/main/res/values-ca/strings_5.xml
+++ b/app/src/main/res/values-ca/strings_5.xml
@@ -37,7 +37,7 @@
         <b>Opcions:</b><br>
         <br>
         <h6><font color="#00BFFF">- En Dies</font></h6>
-        Les trucades que van ocórrer abans de <font color="cyan">%s dies</font> són ignorades.<br>
+        Les trucades que van ocórrer abans de <font color="#03DAC5">%s dies</font> són ignorades.<br>
         <br>
         <h6><font color="#00BFFF">- Incloure SMS</font></h6>
         Quan està activat, enviar missatges a aquest número també compta.<br>
