--- a/app/src/main/res/values-es/strings_18.xml
+++ b/app/src/main/res/values-es/strings_18.xml
@@ -57,10 +57,10 @@
         <b>Opciones:</b><br>
         <br>
         <h6><font color="#00BFFF">- Dentro de días</font></h6>
-        Las llamadas que ocurrieron antes de <font color="cyan">%d días</font> son ignoradas.<br>
+        Las llamadas que ocurrieron antes de <font color="#03DAC5">%d días</font> son ignoradas.<br>
         <br>
         <h6><font color="#00BFFF">- Duración mínima</font></h6>
-        Las llamadas que duraron menos de <font color="cyan">%d segundos</font> son ignoradas.<br>
+        Las llamadas que duraron menos de <font color="#03DAC5">%d segundos</font> son ignoradas.<br>
         <br>
         <font color="#ea86ff"><b>Prioridad: 10</b></font>
         ]]>
