--- a/app/src/main/res/values-fr/strings_18.xml
+++ b/app/src/main/res/values-fr/strings_18.xml
@@ -57,10 +57,10 @@
         <b>Options :</b><br>
         <br>
         <h6><font color="#00BFFF">- Dans les jours</font></h6>
-        Les appels qui ont eu lieu avant <font color="cyan">%d jours</font> sont ignorés.<br>
+        Les appels qui ont eu lieu avant <font color="#03DAC5">%d jours</font> sont ignorés.<br>
         <br>
         <h6><font color="#00BFFF">- Durée minimale</font></h6>
-        Les appels d\'une durée inférieure à <font color="cyan">%d secondes</font> sont ignorés.<br>
+        Les appels d\'une durée inférieure à <font color="#03DAC5">%d secondes</font> sont ignorés.<br>
         <br>
         <font color="#ea86ff"><b>Priorité : 10</b></font>
         ]]>
