--- a/app/src/main/res/values-fr/strings_22.xml
+++ b/app/src/main/res/values-fr/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">Durée (minutes)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        Appuyez sur le bouton <font color="cyan">Test</font> pour exécuter manuellement ce flux de travail.
+        Appuyez sur le bouton <font color="#03DAC5">Test</font> pour exécuter manuellement ce flux de travail.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">Délai (secondes)</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        Cette fonctionnalité modifie temporairement la sonnerie système par défaut avant que la sonnerie ne commence, puis la rétablit après <font color="cyan">%d secondes</font>, moment auquel la sonnerie est censée avoir débuté. <br>
+        Cette fonctionnalité modifie temporairement la sonnerie système par défaut avant que la sonnerie ne commence, puis la rétablit après <font color="#03DAC5">%d secondes</font>, moment auquel la sonnerie est censée avoir débuté. <br>
         <br>
         Certains téléphones offrent des fonctionnalités comme <b>Vibrer d\'abord, puis sonner</b> qui peuvent retarder la sonnerie de, par exemple, 6 secondes. Dans ce cas, augmentez ce délai en conséquence.
         ]]>
