--- a/app/src/main/res/values-gal/strings_22.xml
+++ b/app/src/main/res/values-gal/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">Duración (minutos)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        Toca o botón <font color="cyan">Probar</font> para executar manualmente este fluxo de traballo.
+        Toca o botón <font color="#03DAC5">Probar</font> para executar manualmente este fluxo de traballo.
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">Atraso (segundos)</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        Esta función cambia temporalmente o ton de chamada predeterminado do sistema antes de que comece a soar e despois revérteo despois de <font color="cyan">%d segundos</font>, momento no que se espera que xa comezase a soar. <br>
+        Esta función cambia temporalmente o ton de chamada predeterminado do sistema antes de que comece a soar e despois revérteo despois de <font color="#03DAC5">%d segundos</font>, momento no que se espera que xa comezase a soar. <br>
         <br>
         Algúns teléfonos ofrecen funcións como <b>Vibrar Primeiro e despois Soar</b> que poden atrasar o ton de chamada, por exemplo, 6 segundos. Nese caso, aumenta este atraso en consecuencia.
         ]]>
