--- a/app/src/main/res/values-gal/strings_5.xml
+++ b/app/src/main/res/values-gal/strings_5.xml
@@ -36,7 +36,7 @@
         <b>Opcións:</b><br>
         <br>
         <h6><font color="#00BFFF">- Dentro de días</font></h6>
-        As chamadas que ocorreron antes de <font color="cyan">%s días</font> ignóranse.<br>
+        As chamadas que ocorreron antes de <font color="#03DAC5">%s días</font> ignóranse.<br>
         <br>
         <h6><font color="#00BFFF">- Incluír SMS</font></h6>
         Cando está activada, enviar mensaxes de texto a ese número tamén conta.<br>
