--- a/app/src/main/res/values-zh-rCN/strings_22.xml
+++ b/app/src/main/res/values-zh-rCN/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">持续时间（分钟）</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        轻触<font color="cyan">测试</font>按钮以手动运行此工作流程。
+        轻触<font color="#03DAC5">测试</font>按钮以手动运行此工作流程。
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">延迟（秒）</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        此功能在铃声响起前暂时更改系统默认铃声，并在 <font color="cyan">%d 秒</font> 后恢复，届时铃声预计已响起。 <br>
+        此功能在铃声响起前暂时更改系统默认铃声，并在 <font color="#03DAC5">%d 秒</font> 后恢复，届时铃声预计已响起。 <br>
         <br>
         某些手机提供诸如<b>先振动后响铃</b>之类的功能，这可能会将响铃推迟例如 6 秒。在这种情况下，请相应地增加此延迟。
         ]]>
