--- a/app/src/main/res/values-zh-rTW/strings_22.xml
+++ b/app/src/main/res/values-zh-rTW/strings_22.xml
@@ -156,7 +156,7 @@
     <string name="duration_in_minutes">持續時間 (分鐘)</string>
     <string name="help_trigger_manual">
         <![CDATA[
-        點擊 <font color="cyan">測試</font> 按鈕以手動運行此工作流程。
+        點擊 <font color="#03DAC5">測試</font> 按鈕以手動運行此工作流程。
         ]]>
     </string>
     <string name="help_trigger_schedule">
@@ -173,7 +173,7 @@
     <string name="delay_in_seconds">延遲 (秒)</string>
     <string name="help_ringtone_delay">
         <![CDATA[
-        此功能會在響鈴開始前暫時更改系統預設鈴聲，然後在 <font color="cyan">%d 秒</font> 後恢復，屆時預計響鈴已開始。 <br>
+        此功能會在響鈴開始前暫時更改系統預設鈴聲，然後在 <font color="#03DAC5">%d 秒</font> 後恢復，屆時預計響鈴已開始。 <br>
         <br>
         有些手機提供諸如<b>先震動後響鈴</b>的功能，這可能會將響鈴延遲，例如 6 秒。在這種情況下，請相應增加此延遲。
         ]]>
