--- a/app/src/main/res/values/strings_5.xml
+++ b/app/src/main/res/values/strings_5.xml
@@ -35,7 +35,7 @@
         <b>Options:</b><br>
         <br>
         <h6><font color="#00BFFF">- Within Days</font></h6>
-        Calls that occurred before <font color="cyan">%s days</font> are ignored.<br>
+        Calls that occurred before <font color="#03DAC5">%s days</font> are ignored.<br>
         <br>
         <h6><font color="#00BFFF">- Include SMS</font></h6>
         When enabled, texting that number also counts.<br>
